--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "swiper": "^9.1.1"
+    "swiper": "^9.1.1",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
