--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@paypal/react-paypal-js": "^7.8.3",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
@@ -30,6 +32,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
